<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:padding="8dp">

    <TextView
        android:id="@+id/key_dialog_title"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_title_update_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/key_dialog_description"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/key_dialog_title"
        app:layout_constraintStart_toStartOf="@+id/key_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/key_dialog_title"
        tools:text="@string/dialog_key_description_shopify" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/key_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_dialog_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Key" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secret_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/key_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/key_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/key_text_input_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secret_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Secret"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/store_name_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/key_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/key_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/secret_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Store name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_key_value_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/button_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/secret_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/store_name_text_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/update_key_value_button"
        app:layout_constraintEnd_toStartOf="@+id/update_key_value_button"
        app:layout_constraintTop_toTopOf="@+id/update_key_value_button" />

</androidx.constraintlayout.widget.ConstraintLayout>