...
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="$ 10.99" />

    <EditText
        android:id="@+id/product_inventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="168"
        android:inputType="number"
...
